# Courseware-Backend-Go-2022

./: README.md
class0/: READNE.md
class01-go基础/: README.md
class01-go基础/example/01-hello/: main.go
class02/homework/: lv2.go
class03/: README.md  go.sum  main.go
class03-gin/: go.mod
class03-gin/api/: router.go
class03/api/: user.go
class03/utils/: response.go
class04/: README.md
class04-Mysql/example/: go.mod
class04-Mysql/gorm_example/: main.go
class04/example/: main.go
class05/: go.mod
class05-Redis/redis_example/: main.go
class07/: README.md
class07-linux基础与项目部署/example/: main.go
class07-linux基础与项目部署/example2/: main.go
class07/example/: go.mod
class09/: README.md
class1/: README.md
class10/: README.md
class10-消息队列/: README.md  go.mod
class11/: README.md
class11-分布式与RPC框架/: README.md
class12/: README.md
class13/: README.md
class13-网关与反向代理/: README.md
class14/: README.md
class15/: README.md
class15/demo/: prometheus.yml
class16/: README.md
class16-OpenTelemetry/demo/: go.mod  go.sum
class2/: README.md
class2/homework/: lv1.go
class3/: README.md
class3/dao/: user.go
class3/model/: user.go
class4/gorm_example/: go.mod
class5/: README.md
class5/redis_example/: dao.go  set.go  string.go
class6/: README.md
class6/example/02-web-compose/: Cargo.toml  Dockerfile_api  Dockerfile_rpc  docker-compose.yml
class6/example/02-web-compose/migration/: demo_db.sql
class7/: README.md
class7/example2/: go.mod
class8/: README.md
class9/: go.mod  main.go
final/: README.md
winter/: README.md
(+65 files in other folders)
