[package]
name = "demo-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basic
tokio = { version = "1.22.0", features = ["full"] }
futures = "0.3.25"
serde = {version = "1.0", features = ["derive"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
# axum (Http API)
axum = "0.6.1"
# tracing
log = "0.4"
tracing = "0.1"
tracing-attributes = "0.1.23"
tracing-subscriber = "0.3"
# tonic (gRPC)
tonic = "0.8.3"
tonic-build = "0.8.4"
prost = "0.11"
# redis
redis = { version = "0.22.1", features = ["tokio-comp"] }
# sqlx
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
# utils
sha256 = "1.1.1"
chrono = "0.4.23"


[build-dependencies]
tonic-build = "0.8.4"
